--- a/GraphRagforRIRAG_First.ipynb
+++ b/GraphRagforRIRAG_First.ipynb
@@ -6,6 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "L4",
+      "toc_visible": true,
       "mount_file_id": "1fGQ0C9j69q6xloeAz2Nqy-Xyx3CihttI",
       "authorship_tag": "ABX9TyPluKMMoi0jAsTNAwOm7mxm",
       "include_colab_link": true
